--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -18,6 +18,8 @@
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/3/26/n12837717.md#1" target="_blank">【梅辛传】之六：行窃者改过自新的机遇</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/3/26/n12837717.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/messing4-150x120.png" align ="left"></a>在波兰的一座城堡内，发生了一桩失窃案。伯爵夫人的钻石胸针不翼而飞。那个行窃的人在深重的罪恶感中，已经准备要以自杀谢罪。梅辛如何完璧归赵，将她从自杀的罪恶中解脱……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 5:07 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12897335.md#1" target="_blank">新诗：那一天</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12897335.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12890732-2104190953281973-150x120.jpg" align ="left"></a>四月二十五 我们铭记那一天 上万颗赤诚的心 汇聚在强权面前 不为其他 只为告诉世人 修真善忍无错 做好人岂能蒙冤......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 2:34 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/21/n12894049.md#1" target="_blank">汴河船帆飘扬   回忆千年质朴风光</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/21/n12894049.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/01/540e4cf4eef14e2a640440d849b1d1b2-150x120.jpg" align ="left"></a>懂事时，看到壁上那张图就特别喜欢，上学认了字，父亲跟阿公都告诉我那张图叫《清明上河图》，是祖先传下来的，第一次听见“清明上河图”几个字，打心底震了一下......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 9:36 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902737.md#1" target="_blank">一七令．河北的山</a><br></h3>山。 临海，唐山。 西屏障，太行山。 峰峦叠嶂，登苍岩山。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 12:15 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/19/n12890837.md#1" target="_blank">虞美人．春浓</a><br></h3>生机无限春慈育，满眼新荣绿。 梓须刮尽梓枝昂，将欲青春重焕沐崇光。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 12:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902742.md#1" target="_blank">燕父吟——好人记住四二五</a><br></h3>翻翻日历牌 渐渐四二五 依依旧时风 微微心内堵 深深中南海 旁边信访办
 万人静静等 好人在期盼......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 11:47 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901165.md#1" target="_blank">绝句：风烟历历（九首）</a><br></h3>残山断水物华休，败叶尘烟一派秋。
@@ -29,7 +31,5 @@
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898509.md#1" target="_blank">绝句：四月飞花（九首）</a><br></h3>来去佛陀千载长，红尘万里洒金黄。 青云大梵天高处，唯待转轮生众芳。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 12:53 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898508.md#1" target="_blank">诗歌：纪念法轮功学员“4.25”万人上访二十二周年</a><br></h3> 一身正气真善忍 一部史诗感上天 一股清流濯恶世 一段佳活万古传......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 12:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898507.md#1" target="_blank">诗歌：辛丑忆四.二五和平上访</a><br></h3> 大法洪传唤众醒， 回心向善天地容。 多少真情传佳话， 缘胜今生忆相逢。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 12:10 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/19/n12889004.md#1" target="_blank">十六字令．大法神奇（二首）</a><br></h3> 曾， 疾病缠身苦苦挣， 闻天法， 无病一身轻。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 12:12 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/19/n12890845.md#1" target="_blank">浣溪沙．盛春娇</a><br></h3> 沐浴春风万种娇。花浓香溢杏丰娆， 枝柔叶嫩柳轻摇。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/glmaow3740/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/glmaow3740/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/glmaow3740/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
