--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,8 +13,8 @@
 <a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902826.md#1" title="中共推“工龄归零” 重庆受害者叹活不下去""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902837-page44-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902746.md#1" title="五角大楼UFO报告 吹哨人：政府接受了现实""><img width="73" src="https://i.epochtimes.com/assets/uploads/2014/11/141101210654985-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://glmaow3740.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12904392.md#1">普京幕僚：美俄峰会可能在6月登场</a><br>
-:clock8: <em>60分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12904204.md#1">“4.25”上访震惊世界 多国政要持续声援</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12904392.md#1">普京幕僚：美俄峰会可能在6月登场</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12904204.md#1">“4.25”上访震惊世界 多国政要持续声援</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12903378.md#1">访谈：疫情下 如何帮助孩子健康成长</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12903990.md#1">创纪录 德州高中九名学生GPA满分毕业</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12904282.md#1">德通过新IT安全法 为禁华为提供法律框架</a><br>
@@ -96,12 +96,12 @@
 <a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12896833.md#1">炸弹袭中共大使下榻酒店 巴基斯坦4死12伤</a><br>
 <a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12896606.md#1">美国会推动全方位抗共法案 重点一文看懂</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 47,247</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.230.75.154/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 47,247</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 376,294,895 人
+!共 376,294,872 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904204.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/04/1904271215112188-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904204.md#1">“4.25”上访震惊世界 多国政要持续声援</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904042.md#1">贵阳一家庭教会遭打压 张春雷妻子遭传唤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904197.md#1">11法轮功学员遭北京非法起诉 律师吁关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12903131.md#1">无怨无悔“4.25”亲历者走过生死劫</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/23/n12901372.md#1">英国法轮功学员：22年前我所经历的4.25</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12901884.md#1">石采东：坚守“真善忍”4·25铸就永恒道德丰碑</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903525.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903525.md#1">特斯拉在中国麻烦不断 中共官媒高调批评</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12902249.md#1">网文：中共戒不掉对房地产依赖</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12901869.md#1">澳洲废除一带一路 出口中国葡萄遭延迟通关</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/23/n12900261.md#1">传中共令蚂蚁集团交出数据控制权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/23/n12899979.md#1">大陆商铺大量倒闭 药店和房产中介越开越多</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/23/n12899946.md#1">蚂蚁集团旗下余额宝首季净值缩水18.3%</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904282.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1222280881-3-800x450-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904282.md#1">德通过新IT安全法 为禁华为提供法律框架</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904084.md#1">日本关注台湾突发事态 正式讨论相关法律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12902801.md#1">美中角力 美参议员：中共若犯台 将输战争</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12902838.md#1">与中共关系密切 俄一科学家叛国罪判监20年</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12902666.md#1">中国船只南海牛轭礁集结 欧盟首次回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12902557.md#1">前欧洲议会副主席：抵制2022年北京冬奥会</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903709.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/03/sinovac-vaccine-covid-19_1915610644-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903709.md#1">港再添接种科兴疫苗死亡案例 已累积19例</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903603.md#1">辽宁一公司灰水流入辽河 涉事公司背后有国企</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903477.md#1">最近4天 新疆内蒙古等多地再现沙尘天气</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12902692.md#1">知情人：望奎县出现大量复阳病例 民众恐慌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/23/n12899438.md#1">上海一厂房着火8人亡 疑立讯精密旗下公司</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/22/n12898172.md#1">武汉病毒所碰不得 中共和谭德塞翻脸？</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904221.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/04/id12904318-007cAznMly1gpvre5a3a3j30ka0c7gns-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12904221.md#1">长城汽车涉嫌抄袭大众甲壳虫 大众启动调查</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903796.md#1">河南宜阳灵山在建人行景观大桥坍塌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903463.md#1">大陆国家一级篮球运动员李峙锦酒驾被抓</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12903091.md#1">三退声明精选（2021/04/24）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/24/n12902387.md#1">陆中小学肥胖率超一成 三成大学生健康不合格</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/23/n12901000.md#1">世界读书日 陆网友卖二手书遭罚款28万余元</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903497.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/25/n12903497.md#1">新东方在线等4家校外培训机构被顶格罚款</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/21/n12894844.md#1">或涉网络垄断 百度、网易、腾讯被通报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/21/n12893952.md#1">关锦鹏曝拍摄《胭脂扣》秘辛 指成龙险毁经典</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/20/n12891652.md#1">湖南公务员考试73人违规10人作弊 引热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/18/n12888400.md#1">忧中共加强限制教学 英国际学校拟撤出中国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/4/18/n12888070.md#1">央企成凤凰卫视大股东 刘长乐几近出清持股</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/19/n12888922.md#1">【独家】文件爆西藏部队缺疫苗向河北求援</a><br>
