--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -31,8 +31,8 @@
 <tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/12/n12873525.md#1" target="_blank">一枚铜钱竟砸掉了乌纱帽 秀才做了什么事？</a><br></h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/12/n12873525.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/10/shutterstock_1029639910-150x120.jpg" align ="left"></a>一枚小小的铜钱怎么会砸掉一顶乌纱帽呢？这话听起来很不可思议，这个秀才到底做了什么事？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月19日 6:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/7/n12864473.md#1" target="_blank">天堂梦（116）</a><br></h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/7/n12864473.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Heaven--150x120.jpg" align ="left"></a>欺骗学生说，农村是广阔天地，在那里大有作为，提出知识青年上山下乡，到农村去接受贫下中农再教育，把知青骗到农村，以解决由于毛泽东发动文革，造成国民经济崩溃的恶果......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月19日 3:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/2/26/n12777808.md#1" target="_blank">《三国演义》中的高人：神卜、神医和隐士</a><br></h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/2/26/n12777808.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/id12847893-df7fb6d14e7c530b033df77d698d2bc6-150x120.jpg" align ="left"></a>三国故事中，神卜管辂，神医华佗，隐士娄圭，每一个名字都很灿烂。光辉的名望下，交织着精彩的传奇，神奇的故事。吾辈津津乐道，谈论不衰……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月19日 9:32 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/19/n12888978.md#1" target="_blank">新诗：担仔面的怀思</a><br></h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/19/n12888978.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/05/4dde7f8f5048d8029bdc1436ef8ec564-150x120.jpg" align ="left"></a> 一缕肉燥的卤香 引来时间的回踱 步入思绪的流连，穿梭 网成一片怀思......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月19日 9:16 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/17/n12886775.md#1" target="_blank">绝句：时岁星光（九首）</a><br></h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/17/n12886775.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/02/5-1544-150x120.jpg" align ="left"></a>血洒山河惊日月，气冲霄汉动乾坤。 功名壮岁尘飞土，鹏举浩然独一尊。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月19日 12:29 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/19/n12889004.md#1" target="_blank">十六字令．大法神奇（二首）</a><br></h3> 曾， 疾病缠身苦苦挣， 闻天法， 无病一身轻。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 12:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/19/n12890845.md#1" target="_blank">浣溪沙．盛春娇</a><br></h3> 沐浴春风万种娇。花浓香溢杏丰娆， 枝柔叶嫩柳轻摇。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 12:08 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/19/n12890852.md#1" target="_blank">卜算子．保定古莲池</a><br></h3>保定古莲池，闹市蓬莱阁。
 亭榭楼台玉带桥，书院声名赫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月21日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ofbisf307/djy/blob/master/gb/21/4/19/n12890788.md#1" target="_blank">虞美人．春岸</a><br></h3>纤纤桃叶鲜鲜展，小小榆钱显，
