--- a/gb/nf3046.md
+++ b/gb/nf3046.md
@@ -79,6 +79,7 @@
 （听更多请至“听纪元”平台）
 江泽民.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月11日 6:40 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/8/n12867475.md#1" target="_blank">王友群：江泽民“四二五”的信及其严重后果</a><br></h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/8/n12867475.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12867476-image-1-150x120.jpeg" align ="left"></a>今年4月25日，是上万名法轮功学员到中南海和平上访22周年。1999年4月25日，因为长时间接连不断给江泽民写信反映法轮功问题没有得到任何回音，因为天津发生防暴警察非法抓捕四十多名法轮功学员的事件，法轮功学员决定到北京国家信访局上访。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月09日 8:07 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/26/n12905043.md#1" target="_blank">三退声明精选（2021/04/25）</a><br></h3>中共邪党从建立那天起，就满口谎言，杀人放火，草菅人命，祸国殃民。七十年代我吃饭只给31斤粮票，副食也要各种票券。饿肚子。我妈给我起名“国良”，意思是要我做个国家良民。我们从没想当官发财。可在共产邪党控制下，人们道德迅速下滑，逼良为娼，你想当良民难上难！善良的人在中国活得像狗！所以我被逼来美国。现在天灭中共的时候到了。顺天者昌，逆天者亡。我就顺天意、行天道，做.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 10:53 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/24/n12903091.md#1" target="_blank">三退声明精选（2021/04/24）</a><br></h3>浑浑噩噩大半生，为名为利为生活，在中国这个社会，要想不被人小看，就得没日没夜的劳作，就得忙起来，就得凡事抢在前面！不知不觉中人过中年，疲惫、劳累、忙碌使我落下了一身病，人情冷暖，世态炎凉，心中常常是失落与孤独……。遇到了善良的法轮功朋友，使我明白了做人应该做一个善良的人，做一个符合真、善、忍标准的人！人与人的争争斗斗、尔虞我诈只会造业！同时也使我明白了中共是.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 6:36 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/23/n12899795.md#1" target="_blank">三退声明精选（2021/04/22）</a><br></h3>在这多事之秋的年代，纷乱的社会里，在这极权专治民不聊生的社会里，遇到了善良的你们，使我们这些无处发声，认凭手割的韭菜，有了一次能够发出自己心声的机会，有了一次能够发射内心怨恨的机会，让我们诚心的说一声，我们要坚决的退出曾经被迫加入的团队组织。为邪党的早日解体，往前再迈一步。谢谢！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 2:05 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/21/n12896482.md#1" target="_blank">三退声明精选（2021/04/21）</a><br></h3>我早就了解了共产党的邪恶，特别是我去了新疆之后，看到街上军人拿着刀枪，十步一岗，五步一哨，让人恐惧，就连去饭店都要安检，如果是新疆本地人，安检的时候是浑身上下都要被摸一遍，我觉得共产党真实太邪恶了。我声明退出曾经加入过的少先队组织，与共产党彻底决裂。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月22日 7:55 AM							</td></tr>
@@ -94,8 +95,5 @@ https://tuida.........<br><img align="bottom" src="https://www.epochtimes.com/as
 <tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/14/n12878369.md#1" target="_blank">三退声明精选（2021/04/13）</a><br></h3>我是一个教育工作者。这些年来看到中共的暴行，伤害了我们万千同胞及香港民众的心灵和肉体，我感到非常愤怒。十分痛悔自己为了财富利益去亲近中共官员，加入他们。我现在希望洗心革面，光复华夏文化，驱逐马列共匪，还青年人一个好的学习环境，在此声明退出中共组织团队。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月14日 8:37 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/11/n12872088.md#1" target="_blank">三退声明精选（2021/04/10）</a><br></h3>中共媒体的欺骗，谎言，用暴力镇压爱国人民和好人，在国际上说什么代表14亿人民，欺压老百姓，老百姓收入普遍1千到3千多元，当官的资产百亿、千亿、万亿！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月11日 11:51 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/8/n12865842.md#1" target="_blank">三退声明精选（2021/04/07）</a><br></h3>小时候不知道父亲为什么讨厌共产党，长大了自己翻出来，了解世界上很多人，才发现这是一个邪党，是为了祸害全中国人！我自愿退出共产党的一切邪教组织，愿世间所有人都能平安！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月08日 12:17 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/21/4/8/n12865420.md#1" target="_blank">王友群：第五任中共党魁张闻天的最后结局</a><br></h3>1976年7月1日，是中共成立55周年纪念日。这一天，曾经担任过第五任中共党魁的张闻天，在他的流放地——江苏无锡，心脏病猝然发作。当时，他的脸色苍白，直冒冷汗，手中的外文资料掉在地上，前后不到10分钟，就撒手人间。
-
-张闻天去世后，中共不许发讣告，不许开追悼会，骨灰盒上不许写张闻天的名字，骨灰盒不许安放在殡仪馆的正厅，而被单独安放在一个很小的储藏室里。.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月08日 8:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/binwlg317/djy/blob/master/gb/nf3046.md#1<br><a href="https://github.com/binwlg317/djy/blob/master/gb/nf3046.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/binwlg317/djy/blob/master/gb/nf3046.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046.htm">https://www.epochtimes.com/gb/nf3046.htm</a>    （国内需<a href="https://github.com/binwlg317/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
